12 Полностью рабочий простенький dpi.
 Собирает чёрные списки сайтов из РКН, Add guard, своего списка и